# ezgitx

./: Cargo.toml  EXAMPLES.md  LICENSE-MIT  PRD.md  README.md  SECURITY.md  dist-workspace.toml
.github/workflows/: ci.yml  cut-release.yml
assets/: SKILL.md
scripts/: e2e-brief.sh
src/: cli.rs  config.rs  errors.rs  exec.rs  git.rs  graph.rs  lock.rs  main.rs  output.rs  state.rs  workspace.rs
src/commands/: brief.rs  changed.rs  check_impact.rs  init_skill.rs  mod.rs  pull.rs  run.rs  sessions.rs  status.rs  verify.rs
tests/: brief.rs  changed.rs  check_impact.rs  config.rs  init_skill.rs  locks.rs  pull.rs  run.rs  sessions.rs  status.rs  verify.rs  with_deps.rs
tests/common/: mod.rs
