[package]
name = "ezgitx"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Agent-native multi-repo git CLI: JSONL output, zero interactivity, cross-repo dependency awareness"
repository = "https://github.com/yuval-r/ezgitx"
keywords = ["git", "multi-repo", "agent", "cli", "jsonl"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/PRD.md"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "sync", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jiff = "0.2"
libc = "0.2"
gethostname = "1"
num_cpus = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
